fix validation for required fields

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,6 +20,7 @@
           .alert.alert-warning#alert= flash[:alert]
         - if flash[:error]
           .alert.alert-warning#error= flash[:error]
-    = yield
+    .container
+      = yield
 
     = render '/layouts/footer'
