--- a/app/views/reu_program/applications/index.haml
+++ b/app/views/reu_program/applications/index.haml
@@ -15,6 +15,7 @@
           = link_to s.capitalize, reu_program_applications_path(state: s), class: "btn btn-outline-#{status_class(s)} #{'active' if s == params[:state]}"
       = form_tag reu_program_applications_path, method: 'get' do
         = text_field_tag :search, params[:search]
+        = hidden_field_tag :state, params[:state]
         = submit_tag 'Search', class: 'btn btn-primary' 
   .row
     .col
@@ -44,9 +45,6 @@
       %center
         - if params[:state].blank?
           = "#{@sum} Application".pluralize(@sum)
-        - Application.states.each do |state|
-          - application_state = state[0]
-          - application_count = @count[state[0]] || 0
-          - if params[:state] == application_state
-            = "#{application_count} #{"Application".pluralize(application_count)} #{application_state.capitalize}"
+        - else
+          = "#{@application_count} #{"Application".pluralize(@application_count)} #{params[:state].capitalize}"
           
