--- a/app/views/welcome/marketing_index.haml
+++ b/app/views/welcome/marketing_index.haml
@@ -8,23 +8,23 @@
             %p Your Entire Application Process In One Convenient Location
 
   .container.mb-4
-    .d-flex.justify-content-around
-      .info-box.border.d-flex.flex-column.justify-content-center
+    .d-flex.justify-content-around.flex-column.flex-md-row
+      .info-box.border.d-flex.flex-column.justify-content-center.mb-1
         = icon('far', 'file-alt', class: 'fa-3x outline')
         %h4.mt-2 Application Management
         %p Effortlessly manage hundreds of online applications. The REU manager automates the process from start to finish.
 
-      .info-box.border.d-flex.flex-column.justify-content-center
+      .info-box.border.d-flex.flex-column.justify-content-center.mb-1
         = icon('fas', 'wrench', class: 'fa-3x outline')
         %h4.mt-2 Less Fuss, More Function
         %p Cut the fat out of your workflow. No more paper, no postal mail, no scanning. Completely digital (unless you want a printout)
 
-      .info-box.border.d-flex.flex-column.justify-content-center
+      .info-box.border.d-flex.flex-column.justify-content-center.mb-1
         = icon('fas', 'cloud', class: 'fa-3x outline')
         %h4.mt-2 Everything Is Online
         %p Avoid paper cuts and don't let anything "get lost in the mail". We consolidate everything in one place.
 
-      .info-box.border.d-flex.flex-column.justify-content-center
+      .info-box.border.d-flex.flex-column.justify-content-center.mb-1
         = icon('far', 'check-square', class: 'fa-3x outline')
         %h4.mt-2 Automatic Alerts
         %p Applicants are kept in the loop from start to finish. Email alerts are sent throughout each step of the application process.
