--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -6,6 +6,7 @@
     = javascript_include_tag 'admin'
     -# = javascript_pack_tag 'program_admin'
     -# = stylesheet_pack_tag 'program_admin'
+  %meta{:name => "viewport", :content => "width=device-width,initial-scale=1"}
   %body
     .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.mb-3.bg-white.border-bottom.shadow-sm
       %h3.my-0.mr-md-auto.font-weight-normal #{current_grant.program_title} | REU Manager
