--- a/app/views/reu_program/applications/index.haml
+++ b/app/views/reu_program/applications/index.haml
@@ -21,7 +21,7 @@
         .input-group
           - message = "Search #{"#{params[:state].capitalize} " if params[:state].present?}Applicants"
           = text_field_tag :search, params[:search], class: 'form-control', 'aria-describedby': "search-submit", placeholder: message
-          %buttion.btn.btn-outline-secondary#search-submit(type="submit") Search
+          %button.btn.btn-outline-secondary#search-submit(type="submit") Search
   .row
     .col
       %table.table
