fixed time zone not saving- adds files that were not staged

--- a/app/views/reu_program/settings/edit_modal.haml
+++ b/app/views/reu_program/settings/edit_modal.haml
@@ -19,5 +19,6 @@
             $('.datepicker').flatpickr()
           = f.input :time_zone, priority: /US/
         - else
+          = f.input :value
   .modal-footer.d-flex.justify-content-end
     = f.submit 'Update Setting', class: 'btn btn-primary'
