adds horizontal sscroll bars for tables in the admin section

--- a/app/views/reu_program/dashboard/index.haml
+++ b/app/views/reu_program/dashboard/index.haml
@@ -34,7 +34,7 @@
   .row
     .col
       %h4.float-left Details
-  .row
+  .row.overflow-auto.mx-1
     .col
       %table.table
         %thead
@@ -59,7 +59,7 @@
   .row
     .col
       %h4.float-left Applications
-  .row
+  .row.overflow-auto.mx-1
     .col
       %table.table
         %thead
