--- a/app/views/reu_program/application_forms/_edit_form.haml
+++ b/app/views/reu_program/application_forms/_edit_form.haml
@@ -6,78 +6,78 @@
       .col
         = f.submit 'Save Name', class: 'btn btn-primary float-right'
 
-  .row.border-bottom.mb-2
+  .row.mb-2
     .col
       %h3 Sections
     .col
       .btn-group.float-right
         = link_to 'New Section', new_reu_program_application_form_section_path(@form), class: 'btn btn-primary'
         %button.btn.btn-secondary(type="button" data-toggle="modal" data-target="#reorderSections") Reorder Sections
-
-  %table.table
-    %thead
-      %tr
-        %th Title
-        %th Description
-        %th Repeating
-        %th Required Count
-        %th.text-right Actions
-    %tbody
-      - @form.sections.each do |section|
-        - id = "reorderFields#{section.id}"
+  .row.overflow-auto.mx-1
+    %table.table
+      %thead
         %tr
-          %td= section.title
-          %td= section.description
-          %td= section.repeating ? 'Yes' : 'No'
-          %td= section.repeating ? section.count : ''
-          %td.text-right
-            .btn-group
-              %button.btn.btn-outline-secondary.btn-sm(type="button" data-target="show-fields" data-section="#{section.id}") Show Fields
-              = link_to 'Edit', edit_reu_program_application_form_section_path(@form, section), class: 'btn btn-outline-secondary btn-sm'
-              %button.btn.btn-outline-secondary.btn-sm(type="button" data-toggle="modal" data-target="##{id}") Reorder Fields
-              - unless section.important
-                = link_to 'Delete', reu_program_application_form_section_path(@form, section), method: :delete, data: { confirm: 'Are you sure you want to delete this section?' }, class: 'btn btn-outline-danger btn-sm'
-              - else
-                %button.btn.btn-outline-danger.btn-sm.disabled(type="button" disabled title="Important sections can't be deleted") Delete
-        - display = params[:section_id].present? && params[:section_id].to_i == section.id
-        %tr.field-row(style="#{display ? '' : 'display: none;' }" data-section="#{section.id}")
-          %td(colspan="4")
-            .card.ml-4
-              %ul.list-group.list-group-flush
-                - section.fields.each do |field|
-                  %li.list-group-item
-                    .row
-                      .col
-                        = field.title
-                      .col
-                        = field.description
-                      .col
-                        = field.default_name
-                      .col
-                        .btn-group.float-right
-                          %button.btn.btn-outline-secondary.btn-sm(type="button" data-path="#{edit_field_path(field, section)}" data-target="edit-btn" data-field="#{field.id}") Edit
-                          - unless field.important
-                            = link_to 'Delete', field_path(field, section), method: :delete, class: 'btn btn-outline-danger btn-sm', data: { confirm: 'Are you sure you want to delete this field?' }
-                          - else
-                            %button.btn.btn-outline-danger.btn-sm.disabled(type="button" disabled title="Important fields can't be deleted") Delete
+          %th Title
+          %th Description
+          %th Repeating
+          %th Required Count
+          %th.text-right Actions
+      %tbody
+        - @form.sections.each do |section|
+          - id = "reorderFields#{section.id}"
+          %tr
+            %td= section.title
+            %td= section.description
+            %td= section.repeating ? 'Yes' : 'No'
+            %td= section.repeating ? section.count : ''
+            %td.text-right
+              .btn-group
+                %button.btn.btn-outline-secondary.btn-sm(type="button" data-target="show-fields" data-section="#{section.id}") Show Fields
+                = link_to 'Edit', edit_reu_program_application_form_section_path(@form, section), class: 'btn btn-outline-secondary btn-sm'
+                %button.btn.btn-outline-secondary.btn-sm(type="button" data-toggle="modal" data-target="##{id}") Reorder Fields
+                - unless section.important
+                  = link_to 'Delete', reu_program_application_form_section_path(@form, section), method: :delete, data: { confirm: 'Are you sure you want to delete this section?' }, class: 'btn btn-outline-danger btn-sm'
+                - else
+                  %button.btn.btn-outline-danger.btn-sm.disabled(type="button" disabled title="Important sections can't be deleted") Delete
+          - display = params[:section_id].present? && params[:section_id].to_i == section.id
+          %tr.field-row(style="#{display ? '' : 'display: none;' }" data-section="#{section.id}")
+            %td(colspan="4")
+              .card.ml-4
+                %ul.list-group.list-group-flush
+                  - section.fields.each do |field|
+                    %li.list-group-item
+                      .row
+                        .col
+                          = field.title
+                        .col
+                          = field.description
+                        .col
+                          = field.default_name
+                        .col
+                          .btn-group.float-right
+                            %button.btn.btn-outline-secondary.btn-sm(type="button" data-path="#{edit_field_path(field, section)}" data-target="edit-btn" data-field="#{field.id}") Edit
+                            - unless field.important
+                              = link_to 'Delete', field_path(field, section), method: :delete, class: 'btn btn-outline-danger btn-sm', data: { confirm: 'Are you sure you want to delete this field?' }
+                            - else
+                              %button.btn.btn-outline-danger.btn-sm.disabled(type="button" disabled title="Important fields can't be deleted") Delete
 
-              - content = capture do
-                %p What type of field should be added?
-                %select(data-target="field-add-select" data-path="#{fields_path(section)}")
-                  %option Select a type of field
-                  - Field::TYPES.each do |label, value|
-                    %option(value=value)= label
-              :ruby
-                attrs = {
-                  type: 'button',
-                  title: 'Add Field',
-                  data: {
-                    toggle: 'popover',
-                    placement: 'top',
-                    content: content
+                - content = capture do
+                  %p What type of field should be added?
+                  %select(data-target="field-add-select" data-path="#{fields_path(section)}")
+                    %option Select a type of field
+                    - Field::TYPES.each do |label, value|
+                      %option(value=value)= label
+                :ruby
+                  attrs = {
+                    type: 'button',
+                    title: 'Add Field',
+                    data: {
+                      toggle: 'popover',
+                      placement: 'top',
+                      content: content
+                    }
                   }
-                }
-              %button.btn.btn-primary{ attrs } Add Field
+                %button.btn.btn-primary{ attrs } Add Field
 
 .mt-5.mb-5
 
