adds horizontal scrolling in 2 places

--- a/app/views/reu_program/application_forms/index.haml
+++ b/app/views/reu_program/application_forms/index.haml
@@ -3,7 +3,7 @@
     .col
       %h2 Application Form
   .row
-    .col
+    .col.overflow-auto.mx-1
       %table.table
         %thead
           %tr
