--- a/app/views/reu_program/recommender_forms/index.haml
+++ b/app/views/reu_program/recommender_forms/index.haml
@@ -1,8 +1,8 @@
 .container
   .row
     .col
-      %h2 Recommender/Recomendation Forms
-  .row
+      %h2 Recomendation Forms
+  .row.overflow-auto.mx-1
     .col
       %table.table
         %thead
