--- a/app/views/applications/status.haml
+++ b/app/views/applications/status.haml
@@ -26,7 +26,7 @@
           %p.m-0 Congratulations you have been accepted. Please look for more communication from us about the details of the program.
         - when 'rejected'
           %p.m-0 We are sorry but you have not been accepted into the program.
-    
+
     %h3 Recommenders
     .d-flex.flex-wrap
       - info = current_application.recommender_info.fetch('recommenders_form', {})
@@ -37,6 +37,8 @@
         - info.each_with_index do |r, index|
           :ruby
             recommendation = current_application.recommendations.detect { |s| s.email == r['email'] }
+            next if recommendation.blank?
+
             classes = if recommendation.submitted_at.present?
                         'border-success'
                       elsif recommendation.last_sent_at.blank?
@@ -79,7 +81,7 @@
                     if your recommender cannot find it.
                 = link_to 'Resend Email', recommenders_resend_path(recommendation.id), class: 'btn btn-info btn-sm btn-block'
               - current_application.current_recommender_form.recommender_section.fields.map(&:title_key).each do |key|
-                - value = r[key]        
+                - value = r[key]
                 - path = "recommenders_form--#{index}--#{key}"
                 %p.mb-0(data-obj-path="#{path}")
                   %strong #{format_key(key)}:
