Working on things bios requested - make links more noticable on the welcome page - have the search for applications in the admin apply to the csv and pdf reports - allow client to opt out of the system sending recommenders emails

--- a/app/assets/stylesheets/b4admin.scss
+++ b/app/assets/stylesheets/b4admin.scss
@@ -3,12 +3,6 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-// .alert {
-//     width: 180px;
-//     height: 60px;
-//     padding: .75rem;
-//     text-align: center;
-// }
 * {
     font-family: "Lato", sans-serif;
   }
@@ -22,24 +16,6 @@
     margin-top: 2em;
 }
 
-// article {
-//     margin-top: 1em;
-//     text-align: center;
-// }
-
-// article h2{
-//     line-height: 1em;
-// }
-
-// .card {
-    // text-align: center;
-    // font-size: 2em;
-    // background-color: aliceblue;
-// }
-
-// .card-body {
-    // padding: 0;
-// }
-
-
-
+.tooltip {
+    pointer-events: none;
+}
