--- a/app/views/applications/status.haml
+++ b/app/views/applications/status.haml
@@ -37,11 +37,10 @@
         - info.each_with_index do |r, index|
           :ruby
             recommendation = current_application.recommendations.detect { |s| s.email == r['email'] }
-            next if recommendation.blank?
 
-            classes = if recommendation.submitted_at.present?
+            classes = if recommendation&.submitted_at.present?
                         'border-success'
-                      elsif recommendation.last_sent_at.blank?
+                      elsif recommendation&.last_sent_at.blank?
                         'border-warning'
                       else
                         'border-dark'
@@ -49,25 +48,25 @@
           .card.mb-2.mr-2(class="#{classes}")
             .card-header Recommender #{index + 1}
             .card-body
-              - if recommendation.submitted_at.present?
+              - if recommendation&.submitted_at.present?
                 .alert.alert-success.width-200.p-2
                   %p.m-0
                     Recommender submitted
                     %br
                     a recommendation.
-              - elsif recommendation.last_sent_at.present? && (recommendation.last_sent_at + 1.day) > Time.current
+              - elsif recommendation&.last_sent_at.present? && (recommendation&.last_sent_at + 1.day) > Time.current
                 .alert.alert-info.width-200.p-2
                   %p.m-0
                     Notification email sent to
                     %br
-                    this person at #{recommendation.last_sent_at.strftime('%d/%m/%Y %H:%M')}.
+                    this person at #{recommendation&.last_sent_at&.strftime('%d/%m/%Y %H:%M')}.
                     %br
                     You can only notify this person
                     %br
                     once every 24 hours.
-              - elsif current_application.recommenders_valid? && recommendation.last_sent_at.blank?
+              - elsif recommendation.present? && current_application&.recommenders_valid? && recommendation&.last_sent_at.blank?
                 = link_to 'Send Email', recommenders_resend_path(recommendation.id), class: 'btn btn-info btn-sm btn-block'
-              - elsif current_application.recommenders_valid?
+              - elsif recommendation.present? && current_application&.recommenders_valid?
                 .alert.alert-info.width-200.p-2
                   %p.m-0
                     Notification email sent to recommender
@@ -79,7 +78,7 @@
                     Use this button to resend the email
                     %br
                     if your recommender cannot find it.
-                = link_to 'Resend Email', recommenders_resend_path(recommendation.id), class: 'btn btn-info btn-sm btn-block'
+                = link_to 'Resend Email', recommenders_resend_path(recommendation&.id), class: 'btn btn-info btn-sm btn-block'
               - current_application.current_recommender_form.recommender_section.fields.map(&:title_key).each do |key|
                 - value = r[key]
                 - path = "recommenders_form--#{index}--#{key}"
