--- a/app/views/reu_program/applications/index.haml
+++ b/app/views/reu_program/applications/index.haml
@@ -50,7 +50,7 @@
                 .btn-group
                   = link_to 'Show', reu_program_application_path(application), class: 'btn btn-outline-secondary btn-sm'
                   = link_to 'PDF', reu_program_application_path(application, format: 'pdf'), class: 'btn btn-outline-secondary btn-sm'
-                  = link_to 'CSV', reu_program_application_path(application, format: 'csv'), class: 'btn btn-outline-secondary btn-sm'
+                  %button.btn.btn-outline-secondary.btn-sm(data-target="#csvModal-#{application.id}" data-toggle="modal" type="button") CSV
                   - if application.kept?
                     = link_to 'Remove', reu_program_application_path(application), method: :delete, data: { confirm: 'Are you sure you want to remove this application?'}, class: 'btn btn-outline-danger btn-sm'
                   - else
@@ -62,29 +62,8 @@
     .col
       %center
         = "#{@application_count} #{"Application".pluralize(@application_count)} #{params[:state].capitalize if params[:state]}"
-/ Modal
-#csvModal.modal.fade(aria-hidden="true" aria-labelledby="exampleModalLabel" tabindex="-1")
-  .modal-dialog
-    .modal-content
-      = form_for :csv_fields, url: reu_program_applications_path(format: 'csv', state: params[:state], search: params[:search]), method: :get do |f|
-        .modal-header
-          %h5#exampleModalLabel.modal-title Pick Fields for CSV
-          %button.close(aria-label="Close" data-dismiss="modal" type="button")
-            %span(aria-hidden="true") ×
-        .modal-body
-          - @form = ApplicationForm.active
-          - @form.sections.each do |section|
-            .row.border-bottom.mt-2
-              .col
-                %p
-                  %strong= section.title
-              .col
-                = f.fields_for section.title_key do |sf|
-                  - section.fields.each do |field|
-                    .form-group.form-check.mb-0
-                      = sf.check_box field.title_key, class: 'form-check-input', checked: true
-                      = sf.label field.title_key, field.title
 
-        .modal-footer
-          %button.btn.btn-secondary(data-dismiss="modal" type="button") Close
-          %button.btn.btn-primary Download CSV
+= render partial: 'csv_modal', locals: { modalId: 'csvModal', url: reu_program_applications_path(format: 'csv', state: params[:state], search: params[:search]) }
+
+- @applications.each do |application|
+  = render partial: 'csv_modal', locals: { modalId: "csvModal-#{application.id}", url: reu_program_application_path(application, format: 'csv') }
