Admins with handle recommendations off should still see recommender info

--- a/app/views/reu_program/applications/show.haml
+++ b/app/views/reu_program/applications/show.haml
@@ -66,7 +66,6 @@
   - else
     - info.each_with_index do |r, index|
       - recommendation = @application.recommendations.detect { |s| s.email == r['email'] }
-      - next if recommendation.blank?
       :ruby
         classes = if recommendation&.submitted_at.present?
                     'border-success'
@@ -78,22 +77,24 @@
       .card.mb-2.mr-2(class="#{classes}")
         .card-header Recommender #{index + 1}
         .card-body
-          - if recommendation&.submitted_at.present?
-            .alert.alert-success.p-2
-              %p.m-0 Recommender submitted a recommendation.
-          - else
-            .alert.alert-warning.p-2
-              %p.m-0 Recommender has not yet submitted a recommendation.
+          - if recommendation.present?
+            - if recommendation&.submitted_at.present?
+              .alert.alert-success.p-2
+                %p.m-0 Recommender submitted a recommendation.
+            - else
+              .alert.alert-warning.p-2
+                %p.m-0 Recommender has not yet submitted a recommendation.
 
           - r.each do |key, value|
             - path = "recommenders_form--#{index}--#{key}"
             %p.mb-0(data-obj-path="#{path}")
               %strong #{format_key(key)}:
               = format_value(value, 'recommender', @application.id, path)
-          %hr
-          %h3 Recommender's Response
-          - recommendation.data.fetch('recommendation_form', {}).each do |key, value|
-            - path = "recommendation_form--#{key}"
-            %p.mb-0(data-obj-path="#{path}")
-              %strong #{format_key(key)}:
-              = format_value(value, 'recommendation', recommendation.id, path)
+          - if recommendation.present?
+            %hr
+            %h3 Recommender's Response
+            - recommendation.data.fetch('recommendation_form', {}).each do |key, value|
+              - path = "recommendation_form--#{key}"
+              %p.mb-0(data-obj-path="#{path}")
+                %strong #{format_key(key)}:
+                = format_value(value, 'recommendation', recommendation.id, path)
